--- a/code/package.json
+++ b/code/package.json
@@ -13,9 +13,11 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-portal-hint": "^0.5.2",
     "react-scripts": "^3.4.0",
     "react-spinners": "^0.8.1",
-    "react-time-ago": "^5.0.7"
+    "react-time-ago": "^5.0.7",
+    "react-tooltip-lite": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
