--- a/code/package.json
+++ b/code/package.json
@@ -10,8 +10,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.2.0"
   },
   "scripts": {
