--- a/code/package.json
+++ b/code/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
