--- a/code/package.json
+++ b/code/package.json
@@ -13,7 +13,9 @@
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-tooltip": "^4.1.2",
+    "react-tooltip-lite": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
