--- a/code/package.json
+++ b/code/package.json
@@ -14,6 +14,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-ga": "^3.0.0",
+    "react-gtm-module": "^2.0.8",
     "react-scripts": "3.2.0",
     "react-spinners": "^0.8.1"
   },
