--- a/code/package.json
+++ b/code/package.json
@@ -10,9 +10,11 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "moments": "0.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
