--- a/code/.eslintrc.json
+++ b/code/.eslintrc.json
@@ -52,6 +52,7 @@
         "SwitchCase": 1
       }
     ],
+    "linebreak-style": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-for": "off",
     "jsx-a11y/href-no-hash": "off",
