--- a/code/package.json
+++ b/code/package.json
@@ -14,7 +14,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "react-time-ago": "^6.2.0"
+    "react-spinners": "^0.10.6",
+    "react-time-ago": "^6.2.0",
+    "react-tooltip-lite": "^1.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
