--- a/code/package.json
+++ b/code/package.json
@@ -12,7 +12,9 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-moment": "^1.1.1",
+    "react-scripts": "3.4.3",
+    "react-time-ago": "^6.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
