--- a/code/.eslintrc.json
+++ b/code/.eslintrc.json
@@ -56,6 +56,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-for": "off",
     "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/accessible-emoji": "off",
     "no-alert": "off",
     "no-console": "off",
     "no-debugger": "off",
