added libraries in json

--- a/code/package.json
+++ b/code/package.json
@@ -10,8 +10,11 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "material-react-toastify": "^1.0.1",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^4.0.0",
     "react-moment": "^1.1.1",
     "react-scripts": "3.4.3",
     "react-time-ago": "^6.2.2"
