--- a/code/package.json
+++ b/code/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "toastify-js": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
