--- a/code/package.json
+++ b/code/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "0.0.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -15,7 +17,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.15.5",
-    "react-scripts": "3.4.3"
+    "react-icons": "^4.2.0",
+    "react-scripts": "3.4.3",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
