--- a/code/package.json
+++ b/code/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-scripts": "3.4.3"
   },
   "scripts": {
