--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,5 @@
 # how it should build the JavaScript assets to deploy from.
 [build]
   base = "code/"
-  publish = "code/code/build/"
+  publish = "build/"
   command = "npm run build"
