--- a/code/package.json
+++ b/code/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-spinners": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
