--- a/code/package.json
+++ b/code/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
