--- a/code/package.json
+++ b/code/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-scripts": "3.4.3"
   },
