--- a/code/.eslintrc.json
+++ b/code/.eslintrc.json
@@ -108,6 +108,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "semi": "off",
-    "jsx-quotes": "off"
+    "jsx-quotes": "off",
+    "no-underscore-dangle": "off",
+    "implicit-arrow-linebreak": "off"
   }
 }
