--- a/code/package.json
+++ b/code/package.json
@@ -20,6 +20,7 @@
     "react-spinners": "^0.11.0"
   },
   "scripts": {
+    "postinstall": "npm install --prefix backend",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
