fetch thoughts from api and display thoughts

--- a/happy-thoughts/.eslintrc.json
+++ b/happy-thoughts/.eslintrc.json
@@ -80,6 +80,7 @@
       }
     ],
     "prefer-template": "error",
+    "quotes": ["error", "double"],
     "react/destructuring-assignment": "off",
     "react/forbid-prop-types": "off",
     "react/jsx-closing-bracket-location": [
