--- a/code/package.json
+++ b/code/package.json
@@ -1,6 +1,7 @@
 {
   "name": "technigo-react-starter",
   "version": "1.0.0",
+  "homepage": "https://jenniferwvng.github.io/project-happy-thoughts",
   "private": true,
   "dependencies": {
     "babel-eslint": "^10.1.0",
@@ -15,6 +16,8 @@
     "react-scripts": "^5.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -32,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
