--- a/code/package.json
+++ b/code/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.11.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -13,7 +13,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
