--- a/code/package.json
+++ b/code/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "^10.1.0",
+    "date-fns": "^2.28.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "^16.13.1",
+    "react-animated-bg": "^1.2.2",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-moment": "^1.1.1",
+    "react-scripts": "3.4.3",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
